--- a/client/src/public/partials/world.html
+++ b/client/src/public/partials/world.html
@@ -124,69 +124,71 @@
       </div>
     </div>
     <div class="col-sm-12 well">
-      <h4 class="titleDualTL">
-        {{ 'WORLD_COMPARAISON' | translate }}
-        <div class="inline-select">
-          <ui-select
-            ng-model="entities.sourceCountryEntity1.selected"
-            theme="bootstrap"
-            ng-change="change(entities.sourceCountryEntity1.selected)"
-          >
-            <ui-select-match class="ui-select-match" placeholder="Country"></ui-select-match>
-            <ui-select-choices
-              class="ui-select-choices"
-              repeat="item in reportingCountryEntities1 | filter: $select.search"
+      <h4 class="titleMultiLine">
+        <div>
+          {{ 'WORLD_COMPARAISON' | translate }}
+          <div class="inline-select">
+            <ui-select
+              ng-model="entities.sourceCountryEntity1.selected"
+              theme="bootstrap"
+              ng-change="change(entities.sourceCountryEntity1.selected)"
             >
-              <div ng-bind-html="item.RICname | highlight: $select.search"></div>
-            </ui-select-choices>
-          </ui-select>
+              <ui-select-match class="ui-select-match" placeholder="Country"></ui-select-match>
+              <ui-select-choices
+                class="ui-select-choices"
+                repeat="item in reportingCountryEntities1 | filter: $select.search"
+              >
+                <div ng-bind-html="item.RICname | highlight: $select.search"></div>
+              </ui-select-choices>
+            </ui-select>
+          </div>
         </div>
-        <br />
-        {{selectedMinDate}} – {{selectedMaxDate}}, in
-        <div class="inline-select">
-          <ui-select ng-model="linechartCurrency" theme="bootstrap" ng-change="changeCurrency(linechartCurrency)">
-            <ui-select-match class="ui-select-match" placeholder="Select sterling or percent"
-              >{{$select.selected.name.value}}</ui-select-match
-            >
-            <ui-select-choices
-              class="ui-select-choices"
-              repeat="item in linechartCurrencyChoices | filter: $select.search"
-            >
-              <div ng-bind-html="item.name.value | highlight: $select.search"></div>
-            </ui-select-choices>
-          </ui-select>
-        </div>
-        for
-        <div class="inline-select">
-          <ui-select ng-model="linechartFlow" theme="bootstrap" ng-change="changeFlow(linechartFlow)">
-            <ui-select-match class="ui-select-match" placeholder="Select type flow"
-              >{{$select.selected.name.value}}</ui-select-match
-            >
-            <ui-select-choices class="ui-select-choices" repeat="item in linechartFlowChoices | filter: $select.search">
-              <div ng-bind-html="item.name.value | highlight: $select.search"></div>
-            </ui-select-choices>
-          </ui-select>
+        <div>
+          {{selectedMinDate}} – {{selectedMaxDate}}, in
+          <div class="inline-select">
+            <ui-select ng-model="linechartCurrency" theme="bootstrap" ng-change="changeCurrency(linechartCurrency)">
+              <ui-select-match class="ui-select-match" placeholder="Select sterling or percent"
+                >{{$select.selected.name.value}}</ui-select-match
+              >
+              <ui-select-choices
+                class="ui-select-choices"
+                repeat="item in linechartCurrencyChoices | filter: $select.search"
+              >
+                <div ng-bind-html="item.name.value | highlight: $select.search"></div>
+              </ui-select-choices>
+            </ui-select>
+          </div>
+          for
+          <div class="inline-select">
+            <ui-select ng-model="linechartFlow" theme="bootstrap" ng-change="changeFlow(linechartFlow)">
+              <ui-select-match class="ui-select-match" placeholder="Select type flow"
+                >{{$select.selected.name.value}}</ui-select-match
+              >
+              <ui-select-choices
+                class="ui-select-choices"
+                repeat="item in linechartFlowChoices | filter: $select.search"
+              >
+                <div ng-bind-html="item.name.value | highlight: $select.search"></div>
+              </ui-select-choices>
+            </ui-select>
+          </div>
         </div>
         <div class="subtitle">{{'LINE_CHART_SELECT' | translate }}</div>
-        <br />
-        <span ng-repeat="elm in reporting" ng-click="removeReporting(elm)" ng-style="{color:elm.color}"
-          >{{elm.RICname}}
-          <span class="close-btn">
-            <i class="fa fa-times-circle"></i>
+        <div>
+          <span ng-repeat="elm in reporting" ng-click="removeReporting(elm)" ng-style="{color:elm.color}"
+            >{{elm.RICname}}
+            <span class="close-btn">
+              <i class="fa fa-times-circle"></i>
+            </span>
+            <span ng-if="!$last">, </span>
           </span>
-          <span ng-if="!$last">, </span>
-        </span>
+        </div>
       </h4>
       <p class="paragraphViz">
         {{ 'WORLD_LINES_1' | translate }}
         <a href="#/glossary#worldTrade">{{'WORLD_TRADE' | translate}}</a> {{ 'WORLD_LINES_2' | translate }}
         <a href="#/glossary#worldTrade">{{worldPartner.name.value}}</a>
       </p>
-      <!-- <div ng-show="messagePercent">
-        <p>
-           The percentages are based on the total amount of <a href="/#worldTrade"> world bestguess</a> of {{entities.sourceEntity.selected.RICname}}
-        </p>
-        </div> -->
       <div class="row">
         <div class="col-md-12">
           <div id="select-lineChart">
