--- a/client/src/public/partials/rates.html
+++ b/client/src/public/partials/rates.html
@@ -27,15 +27,15 @@
         </div>
         {{ 'RATES_TITLE_SORTED_BY' | translate }}
         <div class="inline-select">
-          <ui-select ng-model="sortChoice" theme="bootstrap" ng-change="selectSortChoice(sortChoice)">
+          <ui-select ng-model="sortChoice" theme="bootstrap" ng-change="selectSortChoice(sortChoice)" search-enabled="false">
             <ui-select-match class="ui-select-match" placeholder="Select a sorting method">
-              {{$select.selected.label}}
+              {{$select.selected.label | translate}}
             </ui-select-match>
             <ui-select-choices
               class="ui-select-choices"
-              repeat="item.id as item in sortChoices | filter: $select.search"
+              repeat="item.id as item in sortChoices"
             >
-              <div ng-bind-html="item.label | highlight: $select.search"></div>
+              <div ng-bind-html="item.label | translate"></div>
             </ui-select-choices>
           </ui-select>
         </div>
@@ -52,11 +52,14 @@
       </h4>
 
       <div>
-        <ul>
-          <li ng-repeat="currency in filteredCurrenciesList">
-            {{ currency }}
-          </li>
-        </ul>
+        <exchange-rate-curves
+          ng-if="loaded"
+          ref-currency="currency"
+          currencies-list="filteredCurrenciesList"
+          data="currencyRates"
+          dict="currenciesDict"
+          boundaries="boundaries"
+        />
       </div>
     </div>
   </div>
