[client] Renames COUNTRY as REPORTING
Details:
- `country` controller, partial and service become `reporting`
- `countryStatuses` directive becomes `politicalStatuses`
- Routes `#!/country/:country` becomes `#!/reporting/:reporting`, but
the old route redirects to the new
- Renames translation keys and contents to match those changes

--- a/client/src/public/partials/home.html
+++ b/client/src/public/partials/home.html
@@ -36,9 +36,9 @@
           <div class="col-sm-6 col-md-3">
             <div class="box-bg box-bg-country">
               <div class="box-container">
-                <a href="#/country" class="btn btn-link box text-center">
-                  <h2>Country</h2>
-                  <p>{{ 'HOME_COUNTRY_PARA' | translate }}</p>
+                <a href="#/reporting" class="btn btn-link box text-center">
+                  <h2>Reporting</h2>
+                  <p>{{ 'HOME_REPOERTING_PARA' | translate }}</p>
                 </a>
               </div>
             </div>
