--- a/client/src/public/partials/reporting.html
+++ b/client/src/public/partials/reporting.html
@@ -33,8 +33,8 @@
 <div class="container container-page">
   <div class="row">
     <div class="col-sm-12">
-      <h1 class="title-border">{{ 'COUNTRY_INTRO_TITLE' | translate }}</h1>
-      <p>{{ 'COUNTRY_INTRO_PARA' | translate }}</p>
+      <h1 class="title-border">{{ 'REPORTING_INTRO_TITLE' | translate }}</h1>
+      <p>{{ 'REPORTING_INTRO_PARA' | translate }}</p>
     </div>
   </div>
 </div>
@@ -42,7 +42,7 @@
   <div class="row timeline-cont">
     <div class="col-sm-12 well">
       <h4 class="titleDualTL">
-        {{ 'COUNTRY_TITLE_1' | translate }}
+        {{ 'REPORTING_TITLE_1' | translate }}
         <inline-select-country
           ng-model="entities.sourceEntity.selected"
           list="reportingEntities"
@@ -53,7 +53,7 @@
         <inline-select-year ng-model="selectedMaxDate" list="rawYearsRange_forSup"></inline-select-year>
       </h4>
       <p class="paragraphViz">
-        {{ 'COUNTRY_VIEW_DUAL_LEGEND' | translate }}
+        {{ 'REPORTING_VIEW_DUAL_LEGEND' | translate }}
       </p>
       <dual-timeline ng-data="timelineData" start-date="selectedMinDate" end-date="selectedMaxDate"></dual-timeline>
       <brushing-timeline
@@ -93,7 +93,7 @@
       <h4>{{'STATUSES_TITLE' | translate}} {{entities.sourceEntity.selected.RICname}}</h4>
       <p class="paragraphViz">{{'STATUSES_INTRO' | translate}}</p>
       <div>
-        <country-statuses
+        <political-statuses
           sovereignty-data="sovereigntyData"
           dependencies-data="dependenciesData"
           boundaries="boundaries"
@@ -156,14 +156,14 @@
         </div>
       </h4>
       <p class="paragraphViz">
-        {{ 'COUNTRY_PARTNER_HISTO' | translate }}
+        {{ 'REPORTING_PARTNER_HISTO' | translate }}
       </p>
       <ul>
         <li class="paragraphViz">
-          {{ 'COUNTRY_PARTNER_HISTO_1' | translate }}
+          {{ 'REPORTING_PARTNER_HISTO_1' | translate }}
         </li>
         <li class="paragraphViz">
-          {{ 'COUNTRY_PARTNER_HISTO_2' | translate }}
+          {{ 'REPORTING_PARTNER_HISTO_2' | translate }}
         </li>
       </ul>
       <div class="legend-item">
