--- a/client/src/public/css/style.css
+++ b/client/src/public/css/style.css
@@ -970,7 +970,8 @@ div.inline-select .form-control {
   background-color: #fafafa;
   border-bottom: 1px solid #e2ac13;
   font-size: 16px;
-  font-weight: 600;
+  font-weight: 400;
+  width: 100% !important;
 }
 
 div.inline-select div.ui-select-choices-row span {
@@ -995,6 +996,9 @@ div.inline-select div.ui-select-match .text-muted {
   padding-right: 15px;
 }
 
+div.inline-select div.ui-select-match .ui-select-match-text {
+  font-weight: 600;
+}
 /* END INLINE SELECT */
 
 .btnLineChart {
