[client]: Correct bind variable for inline-select in trade comparison

--- a/client/src/public/partials/world.html
+++ b/client/src/public/partials/world.html
@@ -133,9 +133,9 @@
           {{ 'WORLD_COMPARAISON' | translate }}
           <div class="inline-select">
             <ui-select
-              ng-model="entities.sourceCountryEntity1.selected"
+              ng-model="entities.sourceCountryEntity.selected"
               theme="bootstrap"
-              ng-change="change(entities.sourceCountryEntity1.selected)"
+              ng-change="change(entities.sourceCountryEntity.selected)"
             >
               <ui-select-match class="ui-select-match" placeholder="Country"></ui-select-match>
               <ui-select-choices
