--- a/client/src/public/partials/reporting.html
+++ b/client/src/public/partials/reporting.html
@@ -90,8 +90,8 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12 well">
-      <h4>{{'STATUSES_TITLE' | translate}} {{entities.sourceEntity.selected.RICname}}</h4>
-      <p class="paragraphViz">{{'STATUSES_INTRO' | translate}}</p>
+      <h4>{{'REPORTING_STATUSES_TITLE' | translate}} {{entities.sourceEntity.selected.RICname}}</h4>
+      <p class="paragraphViz">{{'REPORTING_STATUSES_INTRO' | translate}}</p>
       <div>
         <political-statuses
           sovereignty-data="sovereigntyData"
