--- a/client/src/public/partials/reporting.html
+++ b/client/src/public/partials/reporting.html
@@ -121,8 +121,8 @@
           translate }} {{ 'PARTNER_HISTO_ORDER_BY' | translate }}
           <div class="inline-select">
             <ui-select ng-model="$parent.ordered" theme="bootstrap" ng-change="changeOrder(ordered)">
-              <ui-selectmatch class="ui-select-match" placeholder="Order by..."
-                >{{$select.selected.name.value}}</ui-selectmatch
+              <ui-select-match class="ui-select-match" placeholder="Order by..."
+                >{{$select.selected.name.value}}</ui-select-match
               >
               <ui-select-choices class="ui-select-choices" repeat="item in orders | filter: $select.search">
                 <div ng-bind-html="item.name.value | highlight: $select.search"></div>
