--- a/client/src/public/partials/partner.html
+++ b/client/src/public/partials/partner.html
@@ -27,7 +27,12 @@
 
         {{ 'FROM' | translate }}
         <div class="inline-select">
-          <ui-select ng-model="selectedMinDate" theme="bootstrap" ng-change="selectMinDate(selectedMinDate)">
+          <ui-select
+            ng-model="selectedMinDate"
+            theme="bootstrap"
+            ng-change="selectMinDate(selectedMinDate)"
+            ng-disabled="minDateRange.length < 2"
+          >
             <ui-select-match class="ui-select-match" placeholder="{{ 'SELECT_MIN_YEAR' | translate }}">
               {{$select.selected}}
             </ui-select-match>
@@ -39,10 +44,15 @@
 
         {{ 'TO' | translate}}
         <div class="inline-select">
-          <ui-select ng-model="selectedMaxDate" theme="bootstrap" ng-change="selectMaxDate(selectedMaxDate)">
-            <ui-select-match class="ui-select-match" placeholder="{{ 'SELECT_MAX_YEAR' | translate }}"
-              >{{$select.selected}}</ui-select-match
-            >
+          <ui-select
+            ng-model="selectedMaxDate"
+            theme="bootstrap"
+            ng-change="selectMaxDate(selectedMaxDate)"
+            ng-disabled="maxDateRange.length < 2"
+          >
+            <ui-select-match class="ui-select-match" placeholder="{{ 'SELECT_MAX_YEAR' | translate }}">
+              {{$select.selected}}
+            </ui-select-match>
             <ui-select-choices class="ui-select-choices" repeat="item in maxDateRange | filter: $select.search">
               <div ng-bind-html="item | highlight: $select.search"></div>
             </ui-select-choices>
