[client] Refactors GPH data shaping into directive
Details:
- politicalStatuse directive now takes partner, boundaries and full GPH
dataset as input, and prepares the data by itself
- Removes former preparation code from both Partner and Reporting
controllers

--- a/client/src/public/partials/partner.html
+++ b/client/src/public/partials/partner.html
@@ -69,9 +69,9 @@
       <p class="paragraphViz">{{'PARTNER_STATUSES_INTRO' | translate}}</p>
       <div>
         <political-statuses
-          sovereignty-data="sovereigntyData"
-          dependencies-data="dependenciesData"
-          boundaries="boundaries"
+          gph-data="gphData"
+          partner="partner"
+          boundaries="{minYear: selectedMinDate, maxYear: selectedMaxDate}"
         />
         <div class="legend">
           <div class="legend-item">
