--- a/client/src/public/partials/reporting.html
+++ b/client/src/public/partials/reporting.html
@@ -244,6 +244,8 @@
     </div>
   </div>
 </div>
+
+<!-- Start: World Comparison -->
 <div class="container comparison">
   <div class="row">
     <div class="col-sm-12 well">
@@ -375,6 +377,9 @@
     </div>
   </div>
 </div>
+<!-- End: World Comparison -->
+
+<!-- Start: Data table -->
 <div class="container">
   <div class="row">
     <div class="col-sm-12 text-center shdt">
@@ -404,3 +409,4 @@
     </div>
   </div>
 </div>
+<!-- End: Data table -->
